--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,6 @@
-remote_theme: pages-themes/cayman@v0.2.0
-plugins:
-- jekyll-remote-theme # add this line to the plugins list if you already have one
-title: Portfolio
+title: Portfolio Isabella Freitag
 description: My portfolio and samples of my work
-show_downloads: false
+show_downloads: true
+google_analytics:
+theme: jekyll-theme-cayman
 
