--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Portfolio Isabella Freitag
 description: My portfolio and samples of my work
-show_downloads: true
+show_downloads: false
 google_analytics:
 theme: jekyll-theme-cayman
 
